--- a/slave/Dockerfile
+++ b/slave/Dockerfile
@@ -5,13 +5,9 @@ MAINTAINER Siamak Sadeghianfar <ssadeghi@redhat.com>
 
 # Install headless Java
 USER root
-RUN yum clean all && \
-    export INSTALL_PKGS="nss_wrapper java-1.8.0-openjdk-headless \
-        java-1.8.0-openjdk-devel nss_wrapper gettext tar git" && \
-    yum clean all && \
+RUN export INSTALL_PKGS="nss_wrapper java-1.8.0-openjdk-headless java-1.8.0-openjdk-devel nss_wrapper gettext tar git" && \
     yum install -y --setopt=tsflags=nodocs install $INSTALL_PKGS && \
     rpm -V $INSTALL_PKGS && \
-    yum clean all && \
     mkdir -p /var/lib/jenkins && \
     chown -R 1001:0 /var/lib/jenkins && \
     chmod -R g+w /var/lib/jenkins
